# ghost-kitchen-optimizer

./: README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
app/: ghost_kitchen_dashboard.py
data/: best_per_location.csv  combo_output.csv  combo_output_with_clusters.csv  location_scores.csv
models/: cuisine_avg_price.pkl  cuisine_avg_rating.pkl  demand_features.pkl  demand_predictor.pkl  demand_predictor_balanced.pkl  demand_threshold.pkl  global_fallbacks.pkl  label_encoder_cuisine.pkl  label_encoder_price.pkl  location_avg_competition.pkl  price_features.pkl  price_global_fallbacks.pkl  price_location_avg_demand.pkl  price_location_avg_normalized.pkl  price_ranges.pkl  price_recommender.pkl  shap_explainer.pkl
notebooks/: 01_data_exploration.ipynb  02_data_exploration.ipynb
notebooks/.ipynb_checkpoints/: 01_data_exploration-checkpoint.ipynb  02_data_exploration-checkpoint.ipynb
src/: clustering.py  demand_predictor.py  price_recommender.py
